# 02_NexusLMD

./: act.bat  color-guide.md  db.sqlite3  hello.py  lint.bat  lora_info.txt  mrun.bat  mrun.sh  mtw.sh  package-lock.json  pyproject.toml  requirements.txt  righteous_info.txt  settings.py  start_mysql.bat  tailwind.config.js  test_db_connection.py  test_mysql_connection.py  verify_mysql_sync.py
apps/about/: urls.py  views.py
apps/activities/: views.py
apps/authenticate/: admin.py  models.py  urls.py  views.py
apps/authenticate/management/: __init__.py
apps/authenticate/migrations/: 0001_initial.py  0002_remove_profile_avatar_profile_avatar_data_and_more.py  0003_remove_profile_avatar_name.py  0004_workexperience.py  0005_educationexperience.py
apps/authenticate/templates/: index.html
apps/chat/: urls.py  views.py
apps/contact/: views.py
apps/home/: urls.py  views.py
apps/metrics/: urls.py  views.py
apps/news/: views.py
apps/news/templates/: index.html
apps/production/: urls.py  views.py
core/: asgi.py  middleware.py  processors.py  settings.py  urls.py  wsgi.py
src/: index.js
static/css/: tailwind.css
static/js/: address.js
staticfiles/admin/css/: base.css
staticfiles/css/: buttons.css  tailwind.css
staticfiles/fonts/: fonts.css
templates/cotton/: aaabase.html
templates/cotton/base/: base.html  leftsb.html  sidebar.html  topmenu.html
theme/: tailwind.config.js
theme/templates/: base.html
theme/templates/components/: forms.html
themex/: tailwind.config.js
themex/static/js/: theme.js
themex/templates/old/: base.html
(+45 files in other folders)
